bdr.BDR.scala.error
Compilation error:
BDR:4: error: not found: value msg
    msg = char getIndication()
    ^BDR:5: error: not found: value msg
    if (msg == "R") {
        ^BDR:9: error: not found: value msg
    if (msg == "L") {
        ^BDR:13: error: not found: value msg
    if (msg == "I") {
        ^BDR:18: error: not found: value msg
    if (msg == "A") {
        ^BDR:21: error: not found: value msg
    if (msg == "B") {
        ^BDR:25: error: not found: value msg
    if (msg == "C") {
        ^BDR:30: error: not found: value msg
    if (msg == "Z") {
        ^BDR:33: error: not found: value msg
    if (msg == "Y") {
        ^BDR:37: error: not found: value msg
    if (msg == "X") {
        ^